# tox-pdm-silent-failure-issue

./: pyproject.toml  tox.ini
